# blob-container-inventory

./: .gitattributes  .gitignore  AGENTS.md  OPEN_DISCOVERY_SPREADSHEET.html  README.md
Azure blob dedup/: ORCHESTRATION.md  SKILL.md
Azure building connect/: SKILL.md
artifacts/: AZURE_SCAN_RESULTS.md  DISCOVERY_LOG.md  INDEX.md
azdedup/: README.md  pyproject.toml
azdedup/src/azdedup/: __init__.py  __main__.py  azure_client.py  cli.py  config.py  inventory.py  tags.py
azdedup/src/azdedup/commands/: dedup.py  report.py  scan.py  verify.py
azdedup/src/azdedup/models/: __init__.py  blob_ref.py  stats.py
azdedup/src/azdedup/pipeline/: __init__.py  canonical.py  full_hash.py  incremental.py  partial_hash.py
azdedup/src/azdedup/workers/: __init__.py  checkpoint.py  pool.py
azdedup/tests/: test_azure_client.py  test_canonical.py  test_config_workers.py  test_dedup_command.py  test_dedup_config.py  test_full_hash.py  test_incremental.py  test_partial_hash.py  test_phase3_commands.py  test_scan_inventory.py  test_tags.py
azdedup/tests/fixtures/: mini_inventory.csv
docs/: AZDEDUP_IMPLEMENTATION_PLAN.md  FAST_TEXT_SCAN_RESULTS.md  HOMES_V2_MIGRATION_PLAN.md  PROD03_BATES_SCAN_PLAN.md  PRODUCTION_DEFICIT_SCOREBOARD.md  PRODUCTION_HUNT_RESULTS.md
prod_3/: PROD03_folder_structure.csv  PROD03_index.csv  SHA256SUMS.txt  enriched.csv  pdf_classifications.csv
prod_indexes/: FORENSIC_INTELLIGENCE.json  FORENSIC_INTELLIGENCE.md  SESSION_BRIEF.md  discovery_log_v4_CURRENT.xlsx
repos/: README.md
schema/: blob_catalog.sql  discovery_schema.sql  discovery_summary.sql
(+172 files in other folders)
