[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "azdedup"
version = "0.3.0"
description = "Hyperscale incremental Azure Blob deduplication CLI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "azure-storage-blob>=12.24.0",
  "azure-identity>=1.15.0",
  "typer>=0.12.0",
  "xxhash>=3.4.0",
  "rich>=13.0.0",
  "pydantic>=2.0.0",
]

[project.optional-dependencies]
parquet = ["pandas>=2.0.0", "pyarrow>=14.0.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]

[project.scripts]
azdedup = "azdedup.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/azdedup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
